force-app/main/default/objects/Historico_estado_proyecto__c/Historico_estado_proyecto__c.object-meta.xml
<CustomObject>
    <label>Historico estado proyecto</label>
    <nameField>
        <label>Nombre de Historico</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historico estado proyecto</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>