force-app/main/default/objects/Historico_estado_proyecto__c/fields/Avance_Contractual_TDRs__c.field-meta.xml
<CustomField>
    <fullName>Avance_Contractual_TDRs__c</fullName>
    <label>Avance Contractual (TDRs)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>