force-app/main/default/objects/Historico_estado_proyecto__c/fields/AvanceContractualEntregables__c.field-meta.xml
<CustomField>
    <fullName>AvanceContractualEntregables__c</fullName>
    <label>Avance Contractual Entregables</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>