force-app/main/default/objects/Historico_estado_proyecto__c/fields/Calculo_Coste_Prom_Inc_Coste_Prom_Resto__c.field-meta.xml
<CustomField>
    <fullName>Calculo_Coste_Prom_Inc_Coste_Prom_Resto__c</fullName>
    <label>Calculo Coste Prom Inc Coste Prom Resto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>