force-app/main/default/objects/Historico_estado_proyecto__c/fields/Calculo_Inventario_Produccion_media__c.field-meta.xml
<CustomField>
    <fullName>Calculo_Inventario_Produccion_media__c</fullName>
    <label>Calculo Inventario Produccion media</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>