force-app/main/default/objects/Historico_estado_proyecto__c/fields/Calculo_WIP_IC__c.field-meta.xml
<CustomField>
    <fullName>Calculo_WIP_IC__c</fullName>
    <label>Calculo WIP IC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>