force-app/main/default/objects/Historico_estado_proyecto__c/fields/Calculo_WIP_Prod_Media__c.field-meta.xml
<CustomField>
    <fullName>Calculo_WIP_Prod_Media__c</fullName>
    <label>Calculo WIP Prod Media</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>