force-app/main/default/objects/Historico_estado_proyecto__c/fields/CalculoDuracionPlan__c.field-meta.xml
<CustomField>
    <fullName>CalculoDuracionPlan__c</fullName>
    <label>Duración Plan (meses)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>