force-app/main/default/objects/Historico_estado_proyecto__c/fields/CalculoDuracionPrevista__c.field-meta.xml
<CustomField>
    <fullName>CalculoDuracionPrevista__c</fullName>
    <label>Duración Prevista (meses)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>