force-app/main/default/objects/Historico_estado_proyecto__c/fields/CalculoDuracionReal__c.field-meta.xml
<CustomField>
    <fullName>CalculoDuracionReal__c</fullName>
    <label>Duración Real (meses)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>