force-app/main/default/objects/Historico_estado_proyecto__c/fields/Cambio_segun_moneda_local__c.field-meta.xml
<CustomField>
    <fullName>Cambio_segun_moneda_local__c</fullName>
    <label>Cambio según moneda local</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>