force-app/main/default/objects/Historico_estado_proyecto__c/fields/Cobrado__c.field-meta.xml
<CustomField>
    <fullName>Cobrado__c</fullName>
    <label>Cobrado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>