force-app/main/default/objects/Historico_estado_proyecto__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <label>Código de Proyecto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>