force-app/main/default/objects/Historico_estado_proyecto__c/fields/Comunicaciones__c.field-meta.xml
<CustomField>
    <fullName>Comunicaciones__c</fullName>
    <label>Comunicaciones</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>