force-app/main/default/objects/Historico_estado_proyecto__c/fields/Consideraciones_OACI_a_KPI__c.field-meta.xml
<CustomField>
    <fullName>Consideraciones_OACI_a_KPI__c</fullName>
    <label>Consideraciones OACI a KPI</label>
    <type>TextArea</type>
</CustomField>