force-app/main/default/objects/Historico_estado_proyecto__c/fields/Cost_Prom_Inc_Cost_Promed__c.field-meta.xml
<CustomField>
    <fullName>Cost_Prom_Inc_Cost_Promed__c</fullName>
    <label>Cost Prom Inc / Cost Promed</label>
    <length>10</length>
    <type>Text</type>
</CustomField>