force-app/main/default/objects/Historico_estado_proyecto__c/fields/Coste_Promedio_Resto__c.field-meta.xml
<CustomField>
    <fullName>Coste_Promedio_Resto__c</fullName>
    <label>Coste Promedio Resto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>