force-app/main/default/objects/Historico_estado_proyecto__c/fields/Coste_Promedio_Resto_EUR__c.field-meta.xml
<CustomField>
    <fullName>Coste_Promedio_Resto_EUR__c</fullName>
    <label>Coste Promedio Resto (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>