force-app/main/default/objects/Historico_estado_proyecto__c/fields/Coste_resto__c.field-meta.xml
<CustomField>
    <fullName>Coste_resto__c</fullName>
    <label>Coste resto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>