force-app/main/default/objects/Historico_estado_proyecto__c/fields/costeDirPrev__c.field-meta.xml
<CustomField>
    <fullName>costeDirPrev__c</fullName>
    <label>Costo Directo Previsto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>