force-app/main/default/objects/Historico_estado_proyecto__c/fields/costeDirReal__c.field-meta.xml
<CustomField>
    <fullName>costeDirReal__c</fullName>
    <label>Coste Directo Real</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>