force-app/main/default/objects/Historico_estado_proyecto__c/fields/Entregable_s__c.field-meta.xml
<CustomField>
    <fullName>Entregable_s__c</fullName>
    <label>Entregables</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>