force-app/main/default/objects/Historico_estado_proyecto__c/fields/Entregables_firmado__c.field-meta.xml
<CustomField>
    <fullName>Entregables_firmado__c</fullName>
    <label>Entregables firmados</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>