force-app/main/default/objects/Historico_estado_proyecto__c/fields/Estado_Datos_Economicos__c.field-meta.xml
<CustomField>
    <fullName>Estado_Datos_Economicos__c</fullName>
    <label>Estado Datos Económicos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>