force-app/main/default/objects/Historico_estado_proyecto__c/fields/Facturacion__c.field-meta.xml
<CustomField>
    <fullName>Facturacion__c</fullName>
    <label>Facturacion Real</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>