force-app/main/default/objects/Historico_estado_proyecto__c/fields/Facturacion_FdP_EUR__c.field-meta.xml
<CustomField>
    <fullName>Facturacion_FdP_EUR__c</fullName>
    <label>Facturación Real FdP EUR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>