force-app/main/default/objects/Historico_estado_proyecto__c/fields/Facturacion_IC__c.field-meta.xml
<CustomField>
    <fullName>Facturacion_IC__c</fullName>
    <label>Facturación / IC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>