force-app/main/default/objects/Historico_estado_proyecto__c/fields/Fecha_alta_SAP__c.field-meta.xml
<CustomField>
    <fullName>Fecha_alta_SAP__c</fullName>
    <label>Fecha alta SAP</label>
    <type>Date</type>
</CustomField>