force-app/main/default/objects/Historico_estado_proyecto__c/fields/Fecha_limite_supervision_OACI__c.field-meta.xml
<CustomField>
    <fullName>Fecha_limite_supervision_OACI__c</fullName>
    <label>Fecha limite supervision OACI</label>
    <type>Date</type>
</CustomField>