force-app/main/default/objects/Historico_estado_proyecto__c/fields/FFC__c.field-meta.xml
<CustomField>
    <fullName>FFC__c</fullName>
    <label>Fecha Fin Contrato</label>
    <type>Date</type>
</CustomField>