force-app/main/default/objects/Historico_estado_proyecto__c/fields/FIC__c.field-meta.xml
<CustomField>
    <fullName>FIC__c</fullName>
    <label>Fecha Inicio Contrato</label>
    <type>Date</type>
</CustomField>