force-app/main/default/objects/Historico_estado_proyecto__c/fields/impcontrato__c.field-meta.xml
<CustomField>
    <fullName>impcontrato__c</fullName>
    <label>Importe del Contrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>