force-app/main/default/objects/Historico_estado_proyecto__c/fields/impcontrato_FdP_EUR__c.field-meta.xml
<CustomField>
    <fullName>impcontrato_FdP_EUR__c</fullName>
    <label>Importe contrato FdP EUR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>