force-app/main/default/objects/Historico_estado_proyecto__c/fields/impcontrato_real__c.field-meta.xml
<CustomField>
    <fullName>impcontrato_real__c</fullName>
    <label>Importe del Contrato (real)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>