force-app/main/default/objects/Historico_estado_proyecto__c/fields/impcontratoEUR_real__c.field-meta.xml
<CustomField>
    <fullName>impcontratoEUR_real__c</fullName>
    <label>Importe Contrato EUR (real)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>