force-app/main/default/objects/Historico_estado_proyecto__c/fields/Importe_Contrato_EUR__c.field-meta.xml
<CustomField>
    <fullName>Importe_Contrato_EUR__c</fullName>
    <label>Importe del Contrato (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>