force-app/main/default/objects/Historico_estado_proyecto__c/fields/Inventario__c.field-meta.xml
<CustomField>
    <fullName>Inventario__c</fullName>
    <label>Inventario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>