force-app/main/default/objects/Historico_estado_proyecto__c/fields/Inventario_Produccion_media__c.field-meta.xml
<CustomField>
    <fullName>Inventario_Produccion_media__c</fullName>
    <label>Inventario / Producción media</label>
    <length>50</length>
    <type>Text</type>
</CustomField>