force-app/main/default/objects/Historico_estado_proyecto__c/fields/Lets_Talk_Respuesta_Asunto__c.field-meta.xml
<CustomField>
    <fullName>Lets_Talk_Respuesta_Asunto__c</fullName>
    <label>Lets Talk Respuesta Asunto</label>
    <length>200</length>
    <type>Text</type>
</CustomField>