force-app/main/default/objects/Historico_estado_proyecto__c/fields/Margen_Plan_Margen_Prev__c.field-meta.xml
<CustomField>
    <fullName>Margen_Plan_Margen_Prev__c</fullName>
    <label>Margen_Plan_Margen_Prev</label>
    <length>10</length>
    <type>Text</type>
</CustomField>