force-app/main/default/objects/Historico_estado_proyecto__c/fields/Margen_prev_Margen_Plan__c.field-meta.xml
<CustomField>
    <fullName>Margen_prev_Margen_Plan__c</fullName>
    <label>Margen prev / Margen Plan</label>
    <length>10</length>
    <type>Text</type>
</CustomField>