force-app/main/default/objects/Historico_estado_proyecto__c/fields/Margen_Previsto__c.field-meta.xml
<CustomField>
    <fullName>Margen_Previsto__c</fullName>
    <label>Margen Previsto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>