force-app/main/default/objects/Historico_estado_proyecto__c/fields/margenplan__c.field-meta.xml
<CustomField>
    <fullName>margenplan__c</fullName>
    <label>Margen Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>