force-app/main/default/objects/Historico_estado_proyecto__c/fields/Mes_Datos_Economicos__c.field-meta.xml
<CustomField>
    <fullName>Mes_Datos_Economicos__c</fullName>
    <label>Mes de los Datos Económicos</label>
    <length>10</length>
    <type>Text</type>
</CustomField>