force-app/main/default/objects/Historico_estado_proyecto__c/fields/Pend_Cobro_Importe_Fact__c.field-meta.xml
<CustomField>
    <fullName>Pend_Cobro_Importe_Fact__c</fullName>
    <label>Pend Cobro / Importe Fact</label>
    <length>10</length>
    <type>Text</type>
</CustomField>