force-app/main/default/objects/Historico_estado_proyecto__c/fields/Pendiente_Cobro_FdP_EUR__c.field-meta.xml
<CustomField>
    <fullName>Pendiente_Cobro_FdP_EUR__c</fullName>
    <label>Pendiente Cobro FdP EUR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>