force-app/main/default/objects/Historico_estado_proyecto__c/fields/Pendiente_de_Cobro_EUR__c.field-meta.xml
<CustomField>
    <fullName>Pendiente_de_Cobro_EUR__c</fullName>
    <label>Pendiente de Cobro (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>