force-app/main/default/objects/Historico_estado_proyecto__c/fields/Porcentaje_de_producto_indicador__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_de_producto_indicador__c</fullName>
    <label>Porcentaje de producto indicador</label>
    <length>10</length>
    <type>Text</type>
</CustomField>