force-app/main/default/objects/Historico_estado_proyecto__c/fields/Prod_media__c.field-meta.xml
<CustomField>
    <fullName>Prod_media__c</fullName>
    <label>Producción media</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>