force-app/main/default/objects/Historico_estado_proyecto__c/fields/Produccion_Avance_EUR__c.field-meta.xml
<CustomField>
    <fullName>Produccion_Avance_EUR__c</fullName>
    <label>Producción Avance EUR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>