force-app/main/default/objects/Historico_estado_proyecto__c/fields/Produccion_media_EUR__c.field-meta.xml
<CustomField>
    <fullName>Produccion_media_EUR__c</fullName>
    <label>Producción media (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>