force-app/main/default/objects/Historico_estado_proyecto__c/fields/Propietario__c.field-meta.xml
<CustomField>
    <fullName>Propietario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Historico_estado_proyecto</relationshipName>
    <type>Lookup</type>
</CustomField>