force-app/main/default/objects/Historico_estado_proyecto__c/fields/Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Proyecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proyecto</label>
    <referenceTo>Proyecto__c</referenceTo>
    <relationshipLabel>Histórico proyecto</relationshipLabel>
    <relationshipName>Historico_estado_proyecto</relationshipName>
    <type>Lookup</type>
</CustomField>