force-app/main/default/objects/Historico_estado_proyecto__c/fields/Responsable_SAP__c.field-meta.xml
<CustomField>
    <fullName>Responsable_SAP__c</fullName>
    <label>Responsable SAP</label>
    <length>40</length>
    <type>Text</type>
</CustomField>