force-app/main/default/objects/Historico_estado_proyecto__c/fields/Terminos_de_Referencia_Aprobados__c.field-meta.xml
<CustomField>
    <fullName>Terminos_de_Referencia_Aprobados__c</fullName>
    <label>TDR&apos;s Aprobados</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>