force-app/main/default/objects/Historico_estado_proyecto__c/fields/TerminosReferencia__c.field-meta.xml
<CustomField>
    <fullName>TerminosReferencia__c</fullName>
    <label>TDR&apos;s</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>