force-app/main/default/objects/Historico_estado_proyecto__c/fields/WIP__c.field-meta.xml
<CustomField>
    <fullName>WIP__c</fullName>
    <label>WIP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>