force-app/main/default/objects/Historico_estado_proyecto__c/fields/WIP_ImporteContrato__c.field-meta.xml
<CustomField>
    <fullName>WIP_ImporteContrato__c</fullName>
    <label>WIP / Importe Contrato</label>
    <length>10</length>
    <type>Text</type>
</CustomField>