force-app/main/default/objects/Historico_estado_proyecto__c/fields/WIP_ProdMedia__c.field-meta.xml
<CustomField>
    <fullName>WIP_ProdMedia__c</fullName>
    <label>WIP / Producción Media</label>
    <length>10</length>
    <type>Text</type>
</CustomField>