force-app/main/default/objects/Historico_estado_proyecto__c/fields/WIP_Produccion_Avance_EUR__c.field-meta.xml
<CustomField>
    <fullName>WIP_Produccion_Avance_EUR__c</fullName>
    <label>WIP (Produccion Avance EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>