force-app/main/default/objects/Historico_estado_proyecto__c/recordTypes/Historico_datos_proyecto.recordType-meta.xml
<RecordType>
    <fullName>Historico_datos_proyecto</fullName>
    <active>true</active>
    <label>Historico datos proyecto</label>
</RecordType>